EWL-10083: Fix spacing issues for membership promos in indexes.

--- a/styleguide/source/assets/scss/03-organisms/_membership.scss
+++ b/styleguide/source/assets/scss/03-organisms/_membership.scss
@@ -282,11 +282,9 @@ a.ama__membership {
       margin-right: -22px;
     }
   }
-  .ama__category-index.ama__category__row--no-border-with-padding {
-    .ama__membership {
-      position: relative;
-      margin-left: -40px;
-      margin-right: -30px;
+  .ama__subcategory-index .layout--ama-page-section-one-col {
+    .ama__membership .ama__membership-content {
+      padding-bottom: 85px;
     }
   }
 }
